sqlite/conformance/sqlite-sqltests/orderby/snapshots/orderby_plan__orderby_rowid_desc_no_sorter.snap
---
source: orderby_plan.sqltest
expression: SELECT * FROM t ORDER BY rowid DESC;
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - orderby_plan
  database: ':memory:'
---
QUERY PLAN
`--SCAN t

BYTECODE
addr  opcode       p1  p2  p3  p4      p5  comment
   0  Init          0  11   0           0  Start at 11
   1  OpenRead      0   2   0  k(2,B)   0  =t, root=2, iDb=0
   2  Last          0   9   0           0
   3  Goto          0   4   0           0
   4    Column      0   0   2           0  r[2]=t.a
   5    Copy        2   3   0           0  r[3]=r[2]
   6    ResultRow   3   1   0           0  output=r[3]
   7  Prev          0   4   0           0
   8  Goto          0   9   0           0
   9  Null          0   1   0           0  r[1]=NULL
  10  Halt          0   0   0           0
  11  Transaction   0   1   1           0  iDb=0 tx_mode=Read
  12  Goto          0   1   0           0
